feat: integrate with firebase

--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,7 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+GoogleService-Info.plist
+
+# firebase purpose
+firebase_app_id_file.json
