--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.1
+  firebase_analytics: ^10.4.2
+  firebase_crashlytics: ^3.3.2
+  firebase_performance: ^0.9.2+2
 
 dev_dependencies:
   flutter_test:
