--- a/.github/flutter_ci.yml
+++ b/.github/flutter_ci.yml
@@ -47,4 +47,4 @@ jobs:
       run: flutter test
     
     - name: Build apk
-      run: flutter build apk
+      run: flutter build apk --debug --split--per-abi
