--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.digiventure.ventfit">
+
+   <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+   <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="ventfit"
         android:name="${applicationName}"
