--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -47,4 +47,4 @@ jobs:
     #   run: flutter test
     
     - name: Build apk
-      run: flutter build apk --debug --split--per-abi
+      run: flutter build apk --debug --split-per-abi
